--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Docs/server.js"
-  },
+  "start": "node server.js"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
